# AuthSamples

./: .gitmodules  README.md
Android/: .gitignore  README.md
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/authappdemo/: MainActivity.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Java/: .gitignore  README.md  build.gradle
Java/src/main/java/com/autheid/examples/simple/: SimpleClient.java
Python/: .gitignore  README.md  run_codegen.py  signature_test.py  signature_test_json.py  simple_client.py
Web/: index.html
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
dotNet/: .gitignore  AuthDemo.sln
dotNet/AuthAPI/: AuthAPI.csproj
dotNet/SimpleClient/: Program.cs  SimpleClient.csproj
iOS/: README.md
iOS/AuthAppDemo-iOS.xcworkspace/: contents.xcworkspacedata
iOS/com.autheid.AuthAppDemo/com.autheid.AuthAppDemo/: AppDelegate.swift  Info.plist  ViewController.swift
iOS/com.autheid.AuthAppDemo/com.autheid.AuthAppDemo.xcodeproj/: project.pbxproj
iOS/com.autheid.AuthAppDemo/com.autheid.AuthAppDemo/Base.lproj/: Main.storyboard
rust/: Cargo.toml  README.md  build.rs
rust/src/: main.rs
