[package]
name = "autheid-sample"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.3.14"
tonic = { version = "0.1.0-alpha.6", features = ["rustls", "rustls-roots"] }
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = "=1.18.5"
http = "0.1"
simple-error = "0.2"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"
